<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        app:cardBackgroundColor="@color/colorVerde"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/titulo2"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
          />
    </android.support.v7.widget.CardView>


    <EditText
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/nick"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nick"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:hint="@string/pass2"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />


    <Button
        android:id="@+id/enviarCita"
        style="@style/botonStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Enviar información"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/terminos"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg" />


</android.support.constraint.ConstraintLayout>